--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="{{ page.url | slugify }}">
 <meta charset="utf-8">
 <title>{{ site.title }}</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700" rel="stylesheet">
@@ -17,5 +17,5 @@
 {{ content }}
 </main>
 <footer role="contentinfo" id="contentinfo">
-    <p>Footer information here! &middot; <a href="#" class="email">Email</a></p>
+    <p>Transforming Community Spaces is a project of <a href="https://pages.shanti.virginia.edu/ucare/">University &amp; Community Action for Racial Equity</a> (<abbr>UCARE</abbr>) and the <a href="http://ien.arch.virginia.edu">Institute for Environmental Negotiation</a> (<abbr>IEN</abbr>) at the University of Virginia. <a href="#" class="email">Email</a></p>
 </footer>
