--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="{{ page.url | slugify }}">
+<html lang="en" class="{{ page.title | slugify }}">
 <meta charset="utf-8">
 <title>{{ site.title }}</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700" rel="stylesheet">
