--- a/styles.scss
+++ b/styles.scss
@@ -23,6 +23,16 @@ body {
     flex-direction: column;
 }
 
+label {
+    display:block;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
+label:first-of-type {
+    margin-top:0;
+}
+
 .audible {
     border: 0;
     clip: rect(0 0 0 0);
